--- a/installer/Linux/portable_files/wpanda.desktop
+++ b/installer/Linux/portable_files/wpanda.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-GenericName=WiRedPanda
-Name=WiRedPanda
+GenericName=wiRedPanda
+Name=wiRedPanda
 Comment=Learn about logic circuits in an easy and friendly way.
 Type=Application
 Icon=wpanda
