--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,7 +57,7 @@ jobs:
         mkdir build
         cd build
         qmake ../WPanda.pro
-        make -j2
+        make -j4
 
     - name: Test Ubuntu
       if: runner.os == 'Linux'
@@ -128,13 +128,13 @@ jobs:
         files: 'build/app/*.zip'
 
 # =================================
-# https://bugreports.qt.io/browse/QTBUG-117225
 
     - name: Build macOS
       if: runner.os == 'macOS'
       run: |
         mkdir build
         cd build
+        # workaround for https://bugreports.qt.io/browse/QTBUG-117225
         qmake ../WPanda.pro -early QMAKE_DEFAULT_LIBDIRS=$(xcrun -show-sdk-path)/usr/lib
         make -j3
 
