--- a/_data/global.yml
+++ b/_data/global.yml
@@ -1,10 +1,10 @@
 # Site Settings
-title: 'WiRedPanda'
+title: 'wiRedPanda'
 description: 'Learn about logic circuits and simulate them in an easy and friendly way.'
 url: 'https://gibis-unifesp.github.io/wiRedPanda/' # the base hostname & protocol for your site
-footer_text: 'Copyright &copy; WiRedPanda Team - 2022'
-keywords: "WiRedPanda,Logic Circuits,Arduino"
+footer_text: 'Copyright &copy; wiRedPanda Team - 2022'
+keywords: "wiRedPanda,Logic Circuits,Arduino"
 
 # Admin Settings
-admin_name: 'WiRedPanda Team'
+admin_name: 'wiRedPanda Team'
 admin_email: 'lucaslellis777@gmail.com'
