--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -11,6 +11,6 @@ links:
   - { id: 'lBwgb8nfnMI', title: 'Calculator' }
   - { id: 'rgV-eJWG_1A', title: 'Elevator controller' }
   - { id: 'C_zxq3Rfgt4', title: 'Tetris Game' }
-  - { id: 'jWXAK4UhgMc', title: 'Getting started to WiRedPanda'}
-  - { id: '6CMYyfBackI', title: 'WiRedPanda presentation at FISL 2016'}
+  - { id: 'jWXAK4UhgMc', title: 'Getting started to wiRedPanda'}
+  - { id: '6CMYyfBackI', title: 'wiRedPanda presentation at FISL 2016'}
 
