--- a/_data/downloads.yml
+++ b/_data/downloads.yml
@@ -1,7 +1,7 @@
 links:
-  - { url: 'https://github.com/GIBIS-UNIFESP/wiRedPanda/releases/download/v4.1.4/WiRedPanda-Windows-Qt5-Portable.zip', text: 'Windows Portable', logo: 'windows' }
-  - { url: 'https://github.com/GIBIS-UNIFESP/wiRedPanda/releases/download/v4.1.4/WiRedPanda-Ubuntu-Qt5.AppImage', text: 'Linux Portable', logo: 'linux' }
-  - { url: 'https://github.com/GIBIS-UNIFESP/wiRedPanda/releases/download/v4.1.4/WiRedPanda-macOS-Qt5.zip', text: 'macOS', logo: 'mac' }
+  - { url: 'https://github.com/GIBIS-UNIFESP/wiRedPanda/releases/download/v4.1.12/wiRedPanda-4.1.12-Windows-Qt5-Portable.zip', text: 'Windows Portable', logo: 'windows' }
+  - { url: 'https://github.com/GIBIS-UNIFESP/wiRedPanda/releases/download/v4.1.12/wiRedPanda-4.1.12-Ubuntu-Qt5.AppImage', text: 'Linux Portable', logo: 'linux' }
+  - { url: 'https://github.com/GIBIS-UNIFESP/wiRedPanda/releases/download/v4.1.12/wiRedPanda-4.1.12-macOS-Qt5.dmg', text: 'macOS', logo: 'mac' }
 
-release: 'https://github.com/GIBIS-UNIFESP/wiRedPanda/releases/tag/v4.1.4'
-source: 'https://github.com/GIBIS-UNIFESP/wiRedPanda/archive/refs/tags/v4.1.4.tar.gz'
+release: 'https://github.com/GIBIS-UNIFESP/wiRedPanda/releases/tag/v4.1.12'
+source: 'https://github.com/GIBIS-UNIFESP/wiRedPanda/archive/refs/tags/v4.1.12.tar.gz'
