deploy: b61860948fff26b51cb68a972768b6a9adbdff54

--- a/wasm/Makefile
+++ b/wasm/Makefile
@@ -24125,6 +24125,79 @@ build_files/obj/main.o: ../app/main.cpp ../app/application.h \
 		../../Qt/6.6.3/wasm_multithread/include/QtCore/QVersionNumber \
 		../../Qt/6.6.3/wasm_multithread/include/QtCore/qversionnumber.h \
 		../../Qt/6.6.3/wasm_multithread/include/QtCore/qtyperevision.h \
+		../app/registertypes.h \
+		../app/element/and.h \
+		../app/graphicelement.h \
+		../app/enums.h \
+		../app/itemwithid.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtCore/QtGlobal \
+		../app/logicelement.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtCore/QVector \
+		../../Qt/6.6.3/wasm_multithread/include/QtCore/qvector.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtCore/QBitArray \
+		../../Qt/6.6.3/wasm_multithread/include/QtCore/qbitarray.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtWidgets/QGraphicsItem \
+		../../Qt/6.6.3/wasm_multithread/include/QtWidgets/qgraphicsitem.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtGui/qpainterpath.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtGui/QKeySequence \
+		../../Qt/6.6.3/wasm_multithread/include/QtGui/QPixmapCache \
+		../../Qt/6.6.3/wasm_multithread/include/QtGui/qpixmapcache.h \
+		../app/element/audiobox.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtMultimedia/QAudioOutput \
+		../../Qt/6.6.3/wasm_multithread/include/QtMultimedia/qaudiooutput.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtMultimedia/qtmultimediaglobal.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtMultimedia/qtmultimedia-config.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtMultimedia/qtmultimediaexports.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtMultimedia/qaudio.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtCore/QFileInfo \
+		../../Qt/6.6.3/wasm_multithread/include/QtMultimedia/QMediaPlayer \
+		../../Qt/6.6.3/wasm_multithread/include/QtMultimedia/qmediaplayer.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtMultimedia/qmediaenumdebug.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtCore/qmetaobject.h \
+		../app/element/buzzer.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtMultimedia/QSoundEffect \
+		../../Qt/6.6.3/wasm_multithread/include/QtMultimedia/qsoundeffect.h \
+		../app/element/clock.h \
+		../app/graphicelementinput.h \
+		../app/element/demux.h \
+		../app/element/dflipflop.h \
+		../app/thememanager.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtGui/QColor \
+		../../Qt/6.6.3/wasm_multithread/include/QtGui/QPalette \
+		../app/element/display_14.h \
+		../app/element/display_7.h \
+		../app/element/dlatch.h \
+		../app/ic.h \
+		../app/elementmapping.h \
+		../app/logicelement/logicinput.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtCore/QCoreApplication \
+		../../Qt/6.6.3/wasm_multithread/include/QtCore/QFileSystemWatcher \
+		../../Qt/6.6.3/wasm_multithread/include/QtCore/qfilesystemwatcher.h \
+		../app/element/inputbutton.h \
+		../app/element/inputgnd.h \
+		../app/element/inputrotary.h \
+		../app/element/inputswitch.h \
+		../app/element/inputvcc.h \
+		../app/element/jkflipflop.h \
+		../app/element/led.h \
+		../app/element/line.h \
+		../app/element/mux.h \
+		../app/element/nand.h \
+		../app/element/node.h \
+		../app/element/nor.h \
+		../app/element/not.h \
+		../app/element/or.h \
+		../app/nodes/qneconnection.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtWidgets/QGraphicsPathItem \
+		../app/nodes/qneport.h \
+		../../Qt/6.6.3/wasm_multithread/include/QtGui/QBrush \
+		../app/element/srflipflop.h \
+		../app/element/srlatch.h \
+		../app/element/text.h \
+		../app/element/tflipflop.h \
+		../app/element/truth_table.h \
+		../app/element/xnor.h \
+		../app/element/xor.h \
 		../../Qt/6.6.3/wasm_multithread/include/QtCore/QCommandLineParser \
 		../../Qt/6.6.3/wasm_multithread/include/QtCore/qcommandlineparser.h \
 		../../Qt/6.6.3/wasm_multithread/include/QtCore/qcommandlineoption.h \
