--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        qt_version: [5.12.12, 5.13.2, 5.14.2, 5.15.2, 6.2.4, 6.3.2, 6.4.3, 6.5.3, 6.6.3, 6.7.3, 6.8.2]
+        qt_version: [5.12.12, 5.13.2, 5.14.2, 5.15.2, 6.2.4, 6.3.2, 6.4.3, 6.5.3, 6.6.3, 6.7.3, 6.8.2, 6.9.0]
 
 # =================================
 
@@ -29,6 +29,11 @@ jobs:
       with:
         version: ${{ matrix.qt_version }}
         cache: true
+        aqtversion: ==3.2.*
+
+    - name: Install CUPS dependency for Qt 6.7.*
+      if: matrix.os == 'ubuntu-latest' && startsWith(matrix.qt_version, '6.7')
+      run: sudo apt update && sudo apt install -y libcups2-dev
 
     - name: Install Qt6
       if: startsWith(matrix.qt_version, '6')
@@ -37,6 +42,7 @@ jobs:
         version: ${{ matrix.qt_version }}
         modules: qtmultimedia qtimageformats
         cache: true
+        aqtversion: ==3.2.*
 
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2
