--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,7 @@ jobs:
         version: 5.15.2
         cache: true
         arch: win32_msvc2019
+        aqtversion: ==3.2.*
 
     - name: Install Qt5 64bit
       if: matrix.os != 'windows-latest'
@@ -42,6 +43,7 @@ jobs:
       with:
         version: 5.15.2
         cache: true
+        aqtversion: ==3.2.*
 
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2
