--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -6,7 +6,7 @@ name: Coverage
 on:
   push:
     branches: 
-     - 'master'
+      - master
 
 jobs:
   Ubuntu-Qt5_15_2-Code_Coverage:
@@ -23,6 +23,7 @@ jobs:
       with:
         version: 5.15.2
         cache: true
+        aqtversion: ==3.2.*
 
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2
