--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -136,8 +136,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        # workaround for https://bugreports.qt.io/browse/QTBUG-117225
-        qmake ../WPanda.pro -early QMAKE_DEFAULT_LIBDIRS=$(xcrun -show-sdk-path)/usr/lib
+        qmake ../WPanda.pro
         make -j3
 
     - name: Test macOS
