--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        qt_version: [5.12.12, 5.13.2, 5.14.2, 5.15.2, 6.2.4, 6.3.2, 6.4.3, 6.5.3, 6.6.3, 6.7.3, 6.8.3, 6.9.0]
+        qt: [5.12.12, 5.13.2, 5.14.2, 5.15.2, 6.2.4, 6.3.2, 6.4.3, 6.5.3, 6.6.3, 6.7.3, 6.8.3, 6.9.0]
 
 # =================================
 
@@ -33,27 +33,18 @@ jobs:
         submodules: recursive
         fetch-depth: 0
 
-    - name: Install Qt5
-      if: startsWith(matrix.qt_version, '5')
+    - name: Install Qt
       uses: jurplel/install-qt-action@v4
       with:
-        version: ${{ matrix.qt_version }}
+        version: ${{ matrix.qt }}
         cache: true
         aqtversion: ==3.2.*
-
-    - name: Install Qt6
-      if: startsWith(matrix.qt_version, '6')
-      uses: jurplel/install-qt-action@v4
-      with:
-        version: ${{ matrix.qt_version }}
-        modules: qtmultimedia qtimageformats
-        cache: true
-        aqtversion: ==3.2.*
+        modules: ${{ startsWith(matrix.qt, '6') && 'qtmultimedia qtimageformats' || '' }}
 
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2
       with:
-        key: ${{ matrix.os }}-${{ matrix.qt_version }}
+        key: ${{ matrix.os }}-${{ matrix.qt }}
 
 # =================================
 
